--- a/index.html
+++ b/index.html
@@ -71,43 +71,43 @@
                   <tbody>
                     <tr>
                       <td>2000</td>
-                      <td id="2000">0</td>
+                      <td class="two-thousand">0</td>
                     </tr>
                     <tr>
                       <td>500</td>
-                      <td id="500">0</td>
+                      <td class="five-hundred">0</td>
                     </tr>
                     <tr>
                       <td>200</td>
-                      <td id="200">0</td>
+                      <td class="two-hundred">0</td>
                     </tr>
                     <tr>
                       <td>100</td>
-                      <td id="100">0</td>
+                      <td class="one-hundred">0</td>
                     </tr>
                     <tr>
                       <td>50</td>
-                      <td id="50">0</td>
+                      <td class="fifty">0</td>
                     </tr>
                     <tr>
                       <td>20</td>
-                      <td id="20">0</td>
+                      <td class="twenty">0</td>
                     </tr>
                     <tr>
                       <td>10</td>
-                      <td id="10">0</td>
+                      <td class="ten">0</td>
                     </tr>
                     <tr>
                       <td>5</td>
-                      <td>0</td>
+                      <td class="five">0</td>
                     </tr>
                     <tr>
                       <td>2</td>
-                      <td>0</td>
+                      <td class="two">0</td>
                     </tr>
                     <tr>
                       <td>1</td>
-                      <td>0</td>
+                      <td class="one">0</td>
                     </tr>
                   </tbody>
                 </tr>
