--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
               
 
               <div class="input-section">
-                <p>Cash Received</p>
-                <input type="text" type="number" placeholder="Enter Cash Given by customer" id="second-input" >
+                <p>Amount Paid</p>
+                <input type="text" type="number" placeholder="Enter your Amount" id="second-input" >
                 <br>
                 <button class="next check" >Check</button>
                 <button class="reset second-reset">Reset</button>
