--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               
 
               <div class="input-section">
-                <p>Amount Paid</p>
+                <p>Cash Given</p>
                 <input type="text" type="number" placeholder="Enter your Amount" id="second-input" >
                 <br>
                 <button class="next check" >Check</button>
